# metalbear

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Makefile  README.md  metalbear.env.example
.github/workflows/: ci.yml
docs/: multi-account.md
include/metalbear/: account.h  account_cache.h  account_context.h  account_registry.h  auth.h  backup.h  blob_store.h  email.h  key_rotation.h  oauth.h  oauth_routes.h  repo_store.h  report.h  sequencer.h  server.h
pdsadmin/: metalbear-admin.sh
src/: account.c  account_cache.c  account_context.c  account_registry.c  auth.c  backup.c  blob_store.c  blob_store_server.c  email.c  key_rotation.c  main.c  oauth.c  oauth_routes.c  repo_store.c  report.c  sequencer.c  server.c
test/: test_auth.c  test_backup.c  test_blob_store.c  test_multi_account.c  test_oauth.c  test_registry.c  test_repo_store.c  test_repo_store_resolver.c  test_routes.c  test_server.c
